--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
     "npm-run-all": "^4.1.5",
+    "raw-loader": "^3.0.0",
     "run-s": "0.0.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
