--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "all": "run-s lint build test",
-    "test": "karma start karma-conf.js",
+    "test": "karma start karma.conf.js",
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --content-base=public --open",
     "lint": "eslint .",
@@ -23,18 +23,24 @@
   "homepage": "https://github.com/amahfouz/backbone-example#readme",
   "dependencies": {
     "backbone": "^1.4.0",
+    "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
+    "exports-loader": "^0.6.4",
+    "expose-loader": "^0.7.5",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "raw-loader": "^3.0.0",
     "run-s": "0.0.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
